Freedom Sanbox Ant Deploy/src/objects/Financial_Wellness__c.object
<CustomObject>
    <description>Created to store Financial wellness client details and score</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Wellness</relationshipLabel>
        <relationshipName>Financial_Wellness</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>20 - 35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 - 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GenerateHtml__c</fullName>
        <label>GenerateHtml</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Income_Source__c</fullName>
        <label>Income Source</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business or Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message_Sharing__c</fullName>
        <label>Message Sharing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score</label>
        <referenceTo>X_Ray_Score_Card_Detail__c</referenceTo>
        <relationshipLabel>Financial Wellness</relationshipLabel>
        <relationshipName>Financial_Wellness</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wellness_Score__c</fullName>
        <label>Wellness Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Wellness</label>
    <nameField>
        <label>Financial Wellness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Wellness</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>